--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-Win32
+*__history
+*__recovery
+*.local
+*.stat
+*.~dfm
+*.~pas
+*.~dsk
+*.dcu
+*.dcp
+*.~dpk
+*.~dpr
+*.suo
+*.bak
+*.~bpg
+*.dsk
+*.identcache
+*.log
